# swagger/swagger.yaml
@@ -49,24 +49,24 @@ paths:
         - Bearer: []
 
 
-  # /auth:
-  #   post:
-  #     tags:
-  #       - "auth"
-  #     summary: "login user"
-  #     operationId: "login"
-  #     requestBody:
-  #       description: "Required user fields"
-  #       required: true
-  #       content:
-  #         application/json:
-  #           schema:
-  #             $ref: "#/components/schemas/Auth"
-  #     responses:
-  #       200:
-  #         description: "successful"
-  #       400:
-  #         description: "Invalid username or password"
+  /auth:
+    post:
+      tags:
+        - "auth"
+      summary: "login user"
+      operationId: "login"
+      requestBody:
+        description: "Required user fields"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Auth"
+      responses:
+        200:
+          description: "successful"
+        400:
+          description: "Invalid username or password"
   # --------------------------------- houses start -------------------------- #
   /houses:
     get:
@@ -146,7 +146,7 @@ components:
         password: 
           type: "string"
         phone: 
-          type: "string"
+          type: "number"
     User1:
       type: "object"
       properties:
@@ -165,10 +165,10 @@ components:
           type: "string"
         description:
           type: "string"
-    # Auth:
-    #   type: "object"
-    #   properties:
-    #     email:
-    #       type: "string"
-    #     password:
-    #       type: "string"
+    Auth:
+      type: "object"
+      properties:
+        email:
+          type: "string"
+        password:
+          type: "string"
